@@ -1,5 +1,10 @@
 2009-01-10  Paul Thomas  <pault@gcc.gnu.org>
 
+	PR fortran/38657
+	* gfortran.dg/module_commons_3.f90: New test.
+
+2009-01-10  Paul Thomas  <pault@gcc.gnu.org>
+
 	PR fortran/38665
 	* gfortran.dg/host_assoc_function_5.f90: New test.
 
